--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              DENY GUSTRIANSYAH
-bio:                'Minimal, one column jekyll theme.'
+bio:                'Mahasiswa Sistem Informasi Di Universitas Islam Negeri Sultan Syarif Kasim Riau'
 description:        "Moon is a minimal, one column jekyll theme for your blog."
 reading_time:       true
 words_per_minute:   200
