--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              DENY GUSTRIANSYAH
-bio:                'Mahasiswa Sistem Informasi Di Universitas Islam Negeri Sultan Syarif Kasim Riau'
+bio:                'Sistem Informasi UIN SUSKA'
 description:        "Moon is a minimal, one column jekyll theme for your blog."
 reading_time:       true
 words_per_minute:   200
@@ -38,27 +38,17 @@ disqus_shortname:   taylantatli
   #ad-slot:
 #bing-verify:
 #email:
-twitter:            username
-facebook:           username
-github:             username
+twitter:            @denydege
+facebook:           @deny.locco
+github:             @gustriansyah
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
-instagram:          username
+instagram:          @deny.gustriansyah
 #lastfm:            username
 #tumblr:            username
 #pinterest:         username
 #foursquare:        username
-steam:              username
-#dribbble:          username
-#youtube:           username
-#soundcloud:        username
-#weibo:             username
-#flickr:            username
-#codepen:           username
-#keybase:           username
-#xmpp:              username@server.com
-#hackernews:        username
 
 # Gems
 gems:
