--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ disqus_shortname:   taylantatli
   #ad-slot:
 #bing-verify:
 #email:
-twitter:            @denydege
+twitter:            <a href ="https://twitter.com/@denydege></a href>
 facebook:           @deny.locco
 github:             @gustriansyah
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
