--- a/_config.yml
+++ b/_config.yml
@@ -38,13 +38,13 @@ disqus_shortname:   taylantatli
   #ad-slot:
 #bing-verify:
 #email:
-twitter:            <a href ="https://twitter.com/DenyDEGE</a href>
-facebook:           <a href ="https://www.facebook.com/deny.locco</a href>
-github:             <a href ="https://github.com/gustriansyah</a href>
+twitter:            https://twitter.com/DenyDEGE
+facebook:           https://www.facebook.com/deny.locco
+github:             https://github.com/gustriansyah
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
-instagram:          <a href ="https://www.instagram.com/deny.gustriansyah</a href>
+instagram:          https://www.instagram.com/deny.gustriansyah
 #lastfm:            username
 #tumblr:            username
 #pinterest:         username
