--- a/_config.yml
+++ b/_config.yml
@@ -38,13 +38,13 @@ disqus_shortname:   taylantatli
   #ad-slot:
 #bing-verify:
 #email:
-twitter:            https://twitter.com/DenyDEGE
-facebook:           https://www.facebook.com/deny.locco
-github:             https://github.com/gustriansyah
+<a href="https://twitter.com/DenyDEGE"> twitter </a>            
+<a href="https://www.facebook.com/deny.locco"> facebook </a>           
+<a href="https://github.com/gustriansyah"> github </a>             
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
-instagram:          https://www.instagram.com/deny.gustriansyah
+<a href="https://www.instagram.com/deny.gustriansyah"> instagram </a>          
 #lastfm:            username
 #tumblr:            username
 #pinterest:         username
