--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ bio:                'Saya kuliah di Sistem Informasi UIN SUSKA Riau. Jika anda b
 description:        
 reading_time:       true
 words_per_minute:   200
-logo:               'assets/img/logo.png'
-background:         'assets/img/placeholder-big.jpg'
+logo:               'assets/img/fst.png'
+background:         'assets/img/UIN-Riau.png'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
 url:                http://gustriansyah.github.io
